--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ MarkupSafe==3.0.2
 marshmallow==3.23.1
 packaging==24.2
 pycparser==2.22
+PyJWT==2.10.0
 PyMySQL==1.1.1
 SQLAlchemy==2.0.36
 typing_extensions==4.12.2
