--- a/requirements.txt
+++ b/requirements.txt
@@ -8,21 +8,28 @@ click==8.1.7
 colorama==0.4.6
 coverage==7.6.7
 cryptography==43.0.3
+Deprecated==1.2.15
 docutils==0.21.2
 Flask==3.1.0
+Flask-Limiter==3.8.0
 flask-marshmallow==1.2.1
 Flask-SQLAlchemy==3.1.1
 gprof2dot==2024.6.6
 greenlet==3.1.1
 idna==3.10
 imagesize==1.4.1
+importlib_resources==6.4.5
 iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
+limits==3.13.0
 line_profiler==4.1.3
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 marshmallow==3.23.1
+mdurl==0.1.2
 memory-profiler==0.61.0
+ordered-set==4.1.0
 packaging==24.2
 pluggy==1.5.0
 psutil==6.1.0
@@ -34,6 +41,7 @@ pytest==8.3.3
 pytest-cov==6.0.0
 pytest-profiling==1.7.0
 requests==2.32.3
+rich==13.9.4
 six==1.16.0
 snowballstemmer==2.2.0
 Sphinx==8.1.3
@@ -49,3 +57,4 @@ SQLAlchemy==2.0.36
 typing_extensions==4.12.2
 urllib3==2.2.3
 Werkzeug==3.1.3
+wrapt==1.17.0
