--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,20 @@ services:
       mysql:
         condition: service_healthy
 
+  sales:
+    build:
+      context: ./sales
+    container_name: sales_service
+    environment:
+      - SQLALCHEMY_DATABASE_URI=mysql+pymysql://root:rootpassword@mysql_container:3306/mydatabase
+    networks:
+      - my_network
+    ports:
+      - "5002:5000"
+    depends_on:
+      mysql:
+        condition: service_healthy
+
 networks:
   my_network:
     driver: bridge
